--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,141 +1,138 @@
 // styles.css
 
 .marketplace {
-    background-color: #2A7E68;
-    padding: 20px;
-    margin: 20px;  
+	background-color: #2a7e68;
+	padding: 20px;
+	margin: 20px;
 }
 
 .marketplace h1 {
-    color:white;
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 80px;
+	color: white;
+	text-align: center;
+	margin-bottom: 20px;
+	font-size: 80px;
 }
 
 .nft-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 80px; 
-    margin: 80px;  
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	gap: 80px;
+	margin: 80px;
 }
 
 .nft {
-    background-color: #29A383;
-    position: relative;
-    cursor: pointer;
-    aspect-ratio: 1/1; 
-    transition: transform 0.6s ease-in-out, box-shadow 0.3s ease-in-out;
-
+	background-color: #29a383;
+	position: relative;
+	cursor: pointer;
+	aspect-ratio: 1/1;
+	transition: transform 0.6s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .nft img {
-    width: 100%;
-    display: block;
+	width: 100%;
+	display: block;
 }
 .nft:hover {
-    transform: scale(1.1);
-    z-index: 1;  
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);  
+	transform: scale(1.1);
+	z-index: 1;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .rented {
-    filter: grayscale(1);
+	filter: grayscale(1);
 }
 
 .rented-label {
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-color: red;
-    color: white;
-    padding: 5px;
+	position: absolute;
+	top: 0;
+	right: 0;
+	background-color: red;
+	color: white;
+	padding: 5px;
 }
 
 .popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.5); 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    visibility: hidden; 
-    opacity: 0;
-    transition: visibility 0s linear 0.25s, opacity 0.25s 0s;  
-    z-index: 10;  
-
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0s linear 0.25s, opacity 0.25s 0s;
+	z-index: 10;
 }
 .popup.open {
-    visibility: visible;  
-    opacity: 1;
-    transition-delay: 0s;
+	visibility: visible;
+	opacity: 1;
+	transition-delay: 0s;
 }
 
 .popup-content {
-    position: relative; 
-    background-color: #29A383;
-    display: flex;
-    align-items: center;
-    padding: 2%; 
-    width: 60%;  
-    height: 60%;  
+	position: relative;
+	background-color: #29a383;
+	display: flex;
+	align-items: center;
+	padding: 2%;
+	width: 60%;
+	height: 60%;
 }
 
-
 .popup-image {
-    height: 80%;
-    aspect-ratio: 1/1;
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    margin-left:5%
+	height: 80%;
+	aspect-ratio: 1/1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: 5%;
 }
 
 .popup-details {
-    margin-left:7%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; 
-    padding: 20px;
-    font-size: 40px;
-    color: white;
-    text-align: center;
+	margin-left: 7%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+	font-size: 40px;
+	color: white;
+	text-align: center;
 }
 .popup-details button {
-    height: 40%;
-    background-color: #27B08B;
-    color: white;
-    padding: 20px 40px;
-    border: none;
-    cursor: pointer;
-    font-size: 40px;
-    width: 100%; 
-    margin: 0 auto; 
+	height: 40%;
+	background-color: #27b08b;
+	color: white;
+	padding: 20px 40px;
+	border: none;
+	cursor: pointer;
+	font-size: 40px;
+	width: 100%;
+	margin: 0 auto;
 }
 .popup-details button:active {
-    background-color: white;
-    color: #27B08B;
+	background-color: white;
+	color: #27b08b;
 }
 .popup-details button:hover {
-    background-color: white;
-    color: #27B08B;
+	background-color: white;
+	color: #27b08b;
 }
 .close-button {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 40px;
-    height: 5px;
-    background-color: white;
-    cursor: pointer;
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	width: 40px;
+	height: 5px;
+	background-color: white;
+	cursor: pointer;
 }
 body {
-    margin: 0;
-    padding: 0;
-    background-color: #2A7E68; 
-    min-height: 100vh;
+	margin: 0;
+	padding: 0;
+	background-color: #2a7e68;
+	min-height: 100vh;
 }
